--- a/index.html
+++ b/index.html
@@ -396,7 +396,8 @@
             { image: 'https://images.justwatch.com/poster/242943249/s332/legally-blondes', name: 'Legalmente Loiras', url: 'https://drive.google.com/file/d/1_BRuRinmkcBXJbDasUur5plSNDJZ8pmf/preview', genre: 'Comédia' },
             { image: 'https://i.ibb.co/nNyJXStv/Picture1.png', name: 'Homem Aranha: Atrá...', url: 'https://www.youtube.com/embed/Ih15Gaw7v3g', genre: 'Animação' },
             { image: 'https://upload.wikimedia.org/wikipedia/pt/b/b5/Duplex-2003-fkfkfkfkfk.jpg', name: 'Duplex', url: 'https://www.youtube.com/embed/CcVRm_Dw6uQ', genre: 'Comédia' },
-
+            { image: 'https://cdn32.ntcdn.pro/testme/dle2/posts/2024-07/lr2brAjZ7r4qPnYCGLBQWZbdqik.jpg', name: 'Sem Saída', url: 'https://www.youtube.com/embed/PEz8fJQvTCk', genre: 'Ação' },
+            { image: 'https://br.web.img3.acsta.net/medias/nmedia/18/87/32/78/19874358.jpg', name: 'Sem Saída', url: 'https://www.youtube.com/embed/Fbh9oJTisOU', genre: 'Ação' },
 ];
         const container = document.querySelector('.container');
         const modal = document.getElementById('videoModal');
