--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <!-- Favicon usando a URL -->
+    <link rel="icon" href="https://i.ibb.co/tpBbDm6y/123.png" type="image/png">
+    <title>Stream+</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria de Filmes</title>
