--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             { image: 'https://upload.wikimedia.org/wikipedia/pt/3/38/Descendants_2_P%C3%B4ster.jpeg', name: 'Descendentes 2', url:'https://drive.google.com/file/d/1YDcFoxZRcln41p8uluz3nO-jvrg7IqpO/preview', genre: 'Aventura', adorocinema: 'https://www.adorocinema.com/filmes/filme-241853/' },
             { image: 'https://upload.wikimedia.org/wikipedia/pt/8/8d/Descendants2.5.jpg', name: 'Descendentes 2.5: Aqui...', url:'https://drive.google.com/file/d/1YX8Yt5YoH1NR9WGFzn2tSk0ZuFoggdVR/preview', genre: 'Aventura', adorocinema: 'https://pt.wikipedia.org/wiki/Under_the_Sea:_A_Descendants_Story' },
             { image: 'https://play-lh.googleusercontent.com/j6ZVxffvob6_LGQoXpLb6GChLSKOWhN1iUFjjI_ROO9mGAVJuBkP1q05wIK6LuNn-uMF', name: 'Descendentes 3', url:'https://drive.google.com/file/d/1cN1kI5ZCDkvTA0mELWYHdbFhPz3jzwAv/preview', genre: 'Aventura', adorocinema: 'https://www.adorocinema.com/filmes/filme-262734/' },
-            { image: 'https://images.justwatch.com/poster/316624627/s718/descedentes-a-ascensao-de-copas.jpg', name: 'Descedentes: A Ascen...', url: 'https://www.youtube.com/embed/4mW2g725l3I', genre: 'Comédia', adorocinema: 'https://www.adorocinema.com/filmes/filme-304431/' },
+            { image: 'https://i.ibb.co/4wLbrHzC/Picture1.png', name: 'Descedentes: A Ascen...', url: 'https://www.youtube.com/embed/HiDOT2CwuIg', genre: 'Comédia', adorocinema: 'https://www.adorocinema.com/filmes/filme-304431/' },
             { image: 'https://m.media-amazon.com/images/S/pv-target-images/43bedd3729685ea324304d157fe76364027579527a9ccea323fb3868f075c3bc.jpg', name: 'Remanescentes...', url: 'https://www.youtube.com/embed/06UDLSRHRTw', genre: 'Drama', adorocinema: 'https://www.adorocinema.com/filmes/filme-230604/' },
             { image: 'https://upload.wikimedia.org/wikipedia/pt/f/fe/Olaf%27s_Frozen_Adventure_poster.jpg', name: 'Frozen: Olaf Em...', url: 'https://www.youtube.com/embed/b8mB3oJwuuc', genre: 'Animação', adorocinema: 'https://www.adorocinema.com/filmes/filme-245007/' },
             { image: 'https://br.web.img2.acsta.net/img/63/b2/63b2d305f79a69eb0a3bd837e8706399.jpg', name: 'Frozen: Febre Con...', url: 'https://www.youtube.com/embed/X4zGnU5wk4o', genre: 'Animação', adorocinema: 'https://www.adorocinema.com/filmes/filme-231333/' },
@@ -430,8 +430,9 @@
             { image: 'https://i.ibb.co/nNyJXStv/Picture1.png', name: 'Homem Aranha: Atrá...', url: 'https://www.youtube.com/embed/Ih15Gaw7v3g', genre: 'Animação', adorocinema: 'https://www.adorocinema.com/filmes/filme-269975/' },
             { image: 'https://upload.wikimedia.org/wikipedia/pt/b/b5/Duplex-2003-fkfkfkfkfk.jpg', name: 'Duplex', url: 'https://www.youtube.com/embed/CcVRm_Dw6uQ', genre: 'Comédia', adorocinema: 'https://www.adorocinema.com/filmes/filme-29156/' },
             { image: 'https://cdn32.ntcdn.pro/testme/dle2/posts/2024-07/lr2brAjZ7r4qPnYCGLBQWZbdqik.jpg', name: 'Sem Saída', url: 'https://www.youtube.com/embed/PEz8fJQvTCk', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-259700/' },
-            { image: 'https://br.web.img3.acsta.net/medias/nmedia/18/87/32/78/19874358.jpg', name: 'Sem Saída', url: 'https://www.youtube.com/embed/Fbh9oJTisOU', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-178184/' },            
-            
+            { image: 'https://img-yts.theproxy.ws/assets/images/movies/Abduction_2011/medium-cover.jpg', name: 'Sem Saída', url: 'https://www.youtube.com/embed/Fbh9oJTisOU', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-178184/' },            
+            { image: 'https://i.ibb.co/rKj0M09Z/Picture1.png', name: 'RED: Crescer...', url: 'https://www.youtube.com/embed/s-ACyD8IIjo', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-263058/' },            
+
             
         ];
 
