--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
             { image: 'https://img-yts.theproxy.ws/assets/images/movies/Abduction_2011/medium-cover.jpg', name: 'Sem Saída', url: 'https://www.youtube.com/embed/Fbh9oJTisOU', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-178184/' },            
             { image: 'https://i.ibb.co/rKj0M09Z/Picture1.png', name: 'RED: Crescer...', url: 'https://www.youtube.com/embed/s-ACyD8IIjo', genre: 'Animação', adorocinema: 'https://www.adorocinema.com/filmes/filme-263058/' },            
             { image: 'https://play-lh.googleusercontent.com/arhBYmQvyusuL-UiRz_fs9YTq8vxLL_3e8RbLRaNwpQ2YJgAmMwrmtuI8vEKOS0BL-iO8Q', name: 'O Presente', url: 'https://www.youtube.com/embed/KN3r5ywCqII', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-235976/' },            
-            { image: 'https://i.ibb.co/Y4Gjz7qP/Picture1.png', name: 'Sonic The Hedgehog 3', url: 'https://www.youtube.com/embed/eRZOxRmhDX0', genre: 'Animação', adorocinema: 'https://www.adorocinema.com/filmes/filme-300949/' },            
+            { image: 'https://i.ibb.co/Y4Gjz7qP/Picture1.png', name: 'Sonic The Hedgehog 3', url: 'https://www.youtube.com/embed/hBlqOAvrxJ0', genre: 'Animação', adorocinema: 'https://www.adorocinema.com/filmes/filme-300949/' },            
 
             
         ];
