--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -435,6 +436,8 @@
             { image: 'https://play-lh.googleusercontent.com/arhBYmQvyusuL-UiRz_fs9YTq8vxLL_3e8RbLRaNwpQ2YJgAmMwrmtuI8vEKOS0BL-iO8Q', name: 'O Presente', url: 'https://www.youtube.com/embed/KN3r5ywCqII', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-235976/' },            
             { image: 'https://i.ibb.co/LhBpHKb9/Picture1.png', name: 'Sonic The Hedgehog 3', url: 'https://www.youtube.com/embed/hBlqOAvrxJ0', genre: 'Animação', adorocinema: 'https://www.adorocinema.com/filmes/filme-300949/' },            
             { image: 'https://i.ibb.co/DBwBnC7/Picture1.png', name: 'Homem-Aranha: Sem...', url: 'https://www.youtube.com/embed/E0Wju4J0ln8', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-256880/' },            
+            { image: 'https://i.pinimg.com/736x/4a/81/42/4a8142ad810129b16697835fa629af56.jpg', name: 'Eu sei O Que Vocês...', url: 'https://www.youtube.com/embed/X90yND9SDXk', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-3546/' },            
+            { image: 'https://br.web.img2.acsta.net/c_310_420/pictures/14/10/01/23/39/584481.jpg', name: 'Eu Ainda sei O Que...', url: 'https://www.youtube.com/embed/Irt--9YbdJg', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-26262/' },            
 
             
         ];
