--- a/index.html
+++ b/index.html
@@ -438,6 +438,7 @@
             { image: 'https://i.pinimg.com/736x/4a/81/42/4a8142ad810129b16697835fa629af56.jpg', name: 'Eu sei O Que Vocês...', url: 'https://www.youtube.com/embed/X90yND9SDXk', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-3546/' },            
             { image: 'https://br.web.img2.acsta.net/c_310_420/pictures/14/10/01/23/39/584481.jpg', name: 'Eu Ainda sei O Que...', url: 'https://www.youtube.com/embed/Irt--9YbdJg', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-26262/' },            
             { image: 'https://m.media-amazon.com/images/M/MV5BZmU3YTM5NTgtOTFmZS00OTI4LTgzZmMtODcyMDgxYzBkMGRjXkEyXkFqcGc@._V1_FMjpg_UX550_.jpg', name: 'Casamento Por Internet', url: 'https://www.youtube.com/embed/VH6bBO93z0o', genre: 'Drama', adorocinema: 'https://filmow.com/casamento-por-internet-t70683/ficha-tecnica/' },            
+            { image: 'https://play-lh.googleusercontent.com/proxy/5418Y7XjZZQk6-8SE5y_N9VIGh4skvRMW8dvtgqzrhpUhwDHZlTlJbU-hFOW8613ArEZkOOl4ni2QkRFte0Rr9FMTGasif_0Ay5h5KULvJam6Pm2BTh8PC3wVyYwDkW-4a225fofGfJ62l2hQNFFha6dsTcSxp2MKJg7HQ=w240-h480-rw', name: 'Amor na Terra da...', url: 'https://multiembed.mov/directstream.php?video_id=tt1526745', genre: 'Drama', adorocinema: 'https://filmow.com/amor-na-terra-da-abobora-t29516/ficha-tecnica/' },            
 
             
         ];
