--- a/index.html
+++ b/index.html
@@ -281,13 +281,13 @@
     <!-- Navbar -->
     <div class="navbar">
         <a href="#" onclick="filterByGenre('all')">Todos</a>
-        <a href="#" onclick="filterByGenre('Ação')">Ação</a>
-        <a href="#" onclick="filterByGenre('Animação')">Animação</a>
-        <a href="#" onclick="filterByGenre('Aventura')">Aventura</a>
-        <a href="#" onclick="filterByGenre('Comédia')">Comédia</a>
-        <a href="#" onclick="filterByGenre('Drama')">Drama</a>
-        <a href="#" onclick="filterByGenre('Terror')">Terror</a>
-        <a href="#" onclick="filterByGenre('Romance')">Romance</a>
+        <a href="#" onclick="filterByGenre('Ação')">🎬 Ação</a>
+        <a href="#" onclick="filterByGenre('Animação')">🐻 Animação</a>
+        <a href="#" onclick="filterByGenre('Aventura')">⚔️ Aventura</a>
+        <a href="#" onclick="filterByGenre('Comédia')">🤡 Comédia</a>
+        <a href="#" onclick="filterByGenre('Drama')">🎭 Drama</a>
+        <a href="#" onclick="filterByGenre('Terror')">😱 Terror</a>
+        <a href="#" onclick="filterByGenre('Romance')">💕 Romance</a>
         <a class="home-button" href="https://streamplus360.github.io/home/">Home 🏠</a>
     </div>
     <!-- Logo e Barra de Pesquisa -->
