--- a/index.html
+++ b/index.html
@@ -444,6 +444,9 @@
             { image: 'https://br.web.img2.acsta.net/c_310_420/pictures/14/10/01/23/39/584481.jpg', name: 'Eu Ainda sei O Que...', url: 'https://www.youtube.com/embed/Irt--9YbdJg', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-26262/' },            
             { image: 'https://m.media-amazon.com/images/M/MV5BZmU3YTM5NTgtOTFmZS00OTI4LTgzZmMtODcyMDgxYzBkMGRjXkEyXkFqcGc@._V1_FMjpg_UX550_.jpg', name: 'Casamento Por Internet', url: 'https://www.youtube.com/embed/VH6bBO93z0o', genre: 'Drama', adorocinema: 'https://filmow.com/casamento-por-internet-t70683/ficha-tecnica/' },            
             { image: 'https://i.pinimg.com/736x/78/80/16/788016bd4fc4de8fb9bde1620e193782.jpg', name: 'Amor na Terra da...', url: 'https://multiembed.mov/directstream.php?video_id=tt1526745', genre: 'Drama', adorocinema: 'https://filmow.com/amor-na-terra-da-abobora-t29516/ficha-tecnica/' },            
+            { image: 'https://images.justwatch.com/poster/11143261/s718/confusoes-amorosas.jpg', name: 'Confusoes Amorosas', url: 'https://multiembed.mov/?video_id=tt0323572', genre: 'Drama', adorocinema: 'https://www.imdb.com/pt/title/tt0323572/' },            
+            { image: 'https://m.media-amazon.com/images/S/pv-target-images/1952ace06f8748e8a5048a3d69cf155e7ddb2b2de9e94aafbc45585a54eb76b1.jpg', name: 'A Casa de Vidro', url: 'https://www.youtube.com/embed/1ZB4CPzKlNg', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-29193/' },            
+            { image: 'https://m.media-amazon.com/images/S/pv-target-images/1952ace06f8748e8a5048a3d69cf155e7ddb2b2de9e94aafbc45585a54eb76b1.jpg', name: 'A Casa de Vidro', url: 'https://www.youtube.com/embed/1ZB4CPzKlNg', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-29193/' },            
 
             
         ];
