--- a/index.html
+++ b/index.html
@@ -446,8 +446,8 @@
             { image: 'https://i.pinimg.com/736x/78/80/16/788016bd4fc4de8fb9bde1620e193782.jpg', name: 'Amor na Terra da...', url: 'https://multiembed.mov/directstream.php?video_id=tt1526745', genre: 'Drama', adorocinema: 'https://filmow.com/amor-na-terra-da-abobora-t29516/ficha-tecnica/' },            
             { image: 'https://images.justwatch.com/poster/11143261/s718/confusoes-amorosas.jpg', name: 'Confusoes Amorosas', url: 'https://multiembed.mov/?video_id=tt0323572', genre: 'Drama', adorocinema: 'https://www.imdb.com/pt/title/tt0323572/' },            
             { image: 'https://m.media-amazon.com/images/S/pv-target-images/1952ace06f8748e8a5048a3d69cf155e7ddb2b2de9e94aafbc45585a54eb76b1.jpg', name: 'A Casa de Vidro', url: 'https://www.youtube.com/embed/1ZB4CPzKlNg', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-29193/' },            
+            { image: 'https://images.justwatch.com/poster/200962924/s718/a-casa-de-vidro-2.jpg', name: 'A Casa de Vidro 2', url: 'https://www.youtube.com/embed/cAFO3xRkw5U', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-119757/' },            
             { image: 'https://play-lh.googleusercontent.com/3eP5_Y75v9LTGWLQtKqKpu8c1bCZ0j3I7tqdFZ3NR9VHIPVIQOXqWzDnFrjKoBjehOOb', name: 'Expresso Transiberiano', url: 'https://www.youtube.com/embed/A-nlOytQZ5I', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-133972/' },            
-
             
         ];
 
