--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
             { image: 'https://images.justwatch.com/poster/176974384/s718/o-lobisomem.jpg', name: 'O Lobisomem', url: 'https://player.vimeo.com/video/1049472965', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-110815/' },
             { image: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTwZ22i_mVSxtZWbHsR5MvV6YJZqp_ASy0l5w&s', name: 'Sherlock Holmes', url: 'https://www.youtube.com/embed/fKDJQzk6tS8', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-127179/' },
             { image: 'https://m.media-amazon.com/images/S/pv-target-images/655a3800f867508deda9e0f46ecf1aba01faead4dd851e137114667a9037de96.jpg', name: 'Sherlock Holmes 2: O...', url: 'https://www.youtube.com/embed/budrUrVerGE', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-173048/' },
-            { image: 'https://i.ibb.co/z8Rcpv1/Picture1.png', name: 'Moana: Um Mar...', url: 'https://www.youtube.com/embed/QB5GSKfPuUA', genre: 'Animação', adorocinema: 'https://www.adorocinema.com/filmes/filme-225958/' },
+            { image: 'https://i.ibb.co/CshCSL23/Picture1.png', name: 'Moana: Um Mar...', url: 'https://www.youtube.com/embed/QB5GSKfPuUA', genre: 'Animação', adorocinema: 'https://www.adorocinema.com/filmes/filme-225958/' },
             { image: 'https://i.pinimg.com/736x/41/1c/1a/411c1a39f9c7954770af976418ac3c4b.jpg', name: 'Mansão Mal Assombrada', url: 'https://www.youtube.com/embed/wgx9aX6npps', genre: 'Aventura', adorocinema: 'https://www.adorocinema.com/filmes/filme-44237/' },
             { image: 'https://m.media-amazon.com/images/S/pv-target-images/8fcd448e2a8f1c70b355655d7c58d2fc6089b64324f74636d8c72183b1806a21.jpg', name: 'Cadê os Morgans?', url: 'https://www.youtube.com/embed/jKTy-Aou3uI', genre: 'Comédia', adorocinema: 'https://www.adorocinema.com/filmes/filme-140335/' },
             { image: 'https://play-lh.googleusercontent.com/9429Zy-TmLZC7JwBN0avoyY-NLUcLo7t9-wvKZuAUfif7CmDuQGNlI5OTjPyCAucGGn1', name: 'Medo Profundo: O Se...', url: 'https://www.youtube.com/embed/WUTiUz9v0vk', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-258790/' },
@@ -448,7 +448,11 @@
             { image: 'https://m.media-amazon.com/images/S/pv-target-images/1952ace06f8748e8a5048a3d69cf155e7ddb2b2de9e94aafbc45585a54eb76b1.jpg', name: 'A Casa de Vidro', url: 'https://www.youtube.com/embed/1ZB4CPzKlNg', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-29193/' },            
             { image: 'https://images.justwatch.com/poster/200962924/s718/a-casa-de-vidro-2.jpg', name: 'A Casa de Vidro 2', url: 'https://www.youtube.com/embed/cAFO3xRkw5U', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-119757/' },            
             { image: 'https://play-lh.googleusercontent.com/3eP5_Y75v9LTGWLQtKqKpu8c1bCZ0j3I7tqdFZ3NR9VHIPVIQOXqWzDnFrjKoBjehOOb', name: 'Expresso Transiberiano', url: 'https://www.youtube.com/embed/A-nlOytQZ5I', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-133972/' },            
-            
+            { image: 'https://i.pinimg.com/736x/a7/3f/ef/a73fef3db440dc9dfa42058e895791ec.jpg', name: 'Panico na Neve', url: 'https://www.youtube.com/embed/F1eywzds9Ik', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-143952/' },            
+            { image: 'https://image.tmdb.org/t/p/original/s3OYpJj03K1ezepvYVoDAcDoCFe.jpg', name: 'Panico Abaixo de Zero', url: 'https://www.youtube.com/embed/nJukHCNrWzk', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-282125/' },            
+            { image: 'https://i.pinimg.com/736x/d4/c7/e8/d4c7e83248d71507d34e4e4ee92df30d.jpg', name: 'A Casa de Areia e Névoa', url: 'https://www.youtube.com/embed/UmYTD_5FTXE', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-44659/' },            
+            { image: 'https://i.pinimg.com/736x/bb/65/11/bb6511189010a3e35a913aa81229069a.jpg', name: 'A Casa de Cera', url: 'https://drive.google.com/file/d/1V9zBIBYB-BxDmZ0QeLxDBcBbnimd0d3m/preview', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-56264/' },
+
         ];
 
         const gallery = document.getElementById('gallery');
