--- a/index.html
+++ b/index.html
@@ -452,6 +452,7 @@
             { image: 'https://image.tmdb.org/t/p/original/s3OYpJj03K1ezepvYVoDAcDoCFe.jpg', name: 'Panico Abaixo de Zero', url: 'https://www.youtube.com/embed/nJukHCNrWzk', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-282125/' },            
             { image: 'https://i.pinimg.com/736x/d4/c7/e8/d4c7e83248d71507d34e4e4ee92df30d.jpg', name: 'A Casa de Areia e Névoa', url: 'https://www.youtube.com/embed/UmYTD_5FTXE', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-44659/' },            
             { image: 'https://i.pinimg.com/736x/bb/65/11/bb6511189010a3e35a913aa81229069a.jpg', name: 'A Casa de Cera', url: 'https://drive.google.com/file/d/1V9zBIBYB-BxDmZ0QeLxDBcBbnimd0d3m/preview', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-56264/' },
+            { image: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0pJSCyhogs6yQvnbp-Awl9wwISwN8abK4NA&s', name: 'Panico Nas Alturas', url: 'https://www.youtube.com/embed/0RYIO5CT8BU', genre: 'Ação', adorocinema: 'https://www.imdb.com/pt/title/tt9805504/' },
 
         ];
 
