--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
             { image: 'https://i.pinimg.com/736x/d4/c7/e8/d4c7e83248d71507d34e4e4ee92df30d.jpg', name: 'A Casa de Areia e Névoa', url: 'https://www.youtube.com/embed/UmYTD_5FTXE', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-44659/' },            
             { image: 'https://i.pinimg.com/736x/bb/65/11/bb6511189010a3e35a913aa81229069a.jpg', name: 'A Casa de Cera', url: 'https://drive.google.com/file/d/1V9zBIBYB-BxDmZ0QeLxDBcBbnimd0d3m/preview', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-56264/' },
             { image: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0pJSCyhogs6yQvnbp-Awl9wwISwN8abK4NA&s', name: 'Panico nas Alturas', url: 'https://www.youtube.com/embed/0RYIO5CT8BU', genre: 'Ação', adorocinema: 'https://www.imdb.com/pt/title/tt9805504/' },
+            { image: 'https://m.media-amazon.com/images/S/pv-target-images/d2f9e49bfc4fcb71209d54a5c8bc03319d3b29661ff60e543aac6bbc1107a448.jpg', name: 'Assim na Terra...', url: 'https://www.youtube.com/embed/D4ovLsopg5U', genre: 'Ação', adorocinema: 'https://www.adorocinema.com/filmes/filme-226884/' },
 
         ];
 
